name:                tofu
version:             0.1.0.0
synopsis:            Extensible protocols
description:         Extensible protocols
homepage:            https://github.com/adelbertc/tofu
license:             Apache-2.0
license-file:        LICENSE
author:              Adelbert Chang
maintainer:          adelbertc@gmail.com
copyright:           2017 Adelbert Chang
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ExtProt.Low.Decode
                     , ExtProt.Low.Encode
                     , ExtProt.Low.Types
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , cereal >= 0.5 && < 0.6
                     , bytes >= 0.15 && < 0.16
                     , bytestring >= 0.10 && < 0.11
  default-language:    Haskell2010

executable tofu
  main-is:             src/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adelbertc/tofu
